--- a/comms/asterisk/Makefile
+++ b/comms/asterisk/Makefile
@@ -1,8 +1,9 @@
-# $NetBSD: Makefile,v 1.5 2005/08/19 18:12:37 jlam Exp $
+# $NetBSD: Makefile,v 1.6 2005/09/02 12:58:34 adam Exp $
 
 DISTNAME=	asterisk-1.0.9
 CATEGORIES=	comms net audio
-MASTER_SITES=	http://ftp.digium.com/pub/asterisk/
+MASTER_SITES=	http://ftp.digium.com/pub/asterisk/ \
+		http://ftp.digium.com/pub/asterisk/old-releases
 
 MAINTAINER=	riz@NetBSD.org
 HOMEPAGE=	http://www.asterisk.org/
