--- a/archivers/gzip-base/Makefile
+++ b/archivers/gzip-base/Makefile
@@ -1,9 +1,9 @@
-# $NetBSD: Makefile,v 1.18 2005/04/11 21:44:48 tv Exp $
+# $NetBSD: Makefile,v 1.19 2005/06/09 20:23:26 adrianp Exp $
 #
 
 DISTNAME=	gzip-1.2.4a
-PKGREVISION=	1
 PKGNAME=	${DISTNAME:S/gzip-/gzip-base-/:S/a$/b/}
+PKGREVISION=	1
 SVR4_PKGNAME=	gzipb
 CATEGORIES=	archivers
 MASTER_SITES=   ${MASTER_SITE_GNU:=gzip/}
