--- a/archivers/pbzip2/Makefile
+++ b/archivers/pbzip2/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.6 2005/06/16 06:57:37 jlam Exp $
+# $NetBSD: Makefile,v 1.7 2005/08/28 17:36:52 rillig Exp $
 #
 
 DISTNAME=		pbzip2-0.9.2
@@ -20,7 +20,7 @@ INSTALLATION_DIRS=	bin
 
 do-build:
 	cd ${WRKSRC}; \
-	$(CXX) $(CPPFLAGS) $(CXXFLAGS) $(LDFLAGS) -o pbzip2 pbzip2.cpp $(LIBS)
+	${CXX} ${CPPFLAGS} ${CXXFLAGS} ${LDFLAGS} -o pbzip2 pbzip2.cpp ${LIBS}
 
 do-install:
 	${INSTALL_PROGRAM} ${WRKSRC}/pbzip2 ${PREFIX}/bin
