--- a/benchmarks/Makefile
+++ b/benchmarks/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.35 2005/08/06 20:45:18 rillig Exp $
+# $NetBSD: Makefile,v 1.36 2005/09/03 05:58:59 xtraeme Exp $
 #
 
 COMMENT=	Benchmarking tools
@@ -20,6 +20,7 @@ SUBDIR+=	iozone
 SUBDIR+=	kttcp
 SUBDIR+=	linpack-bench
 SUBDIR+=	lmbench
+SUBDIR+=	nbench
 SUBDIR+=	netio
 SUBDIR+=	netpipe
 SUBDIR+=	nettest
