--- a/x11/kdebase3/Makefile
+++ b/x11/kdebase3/Makefile
@@ -1,6 +1,7 @@
-# $NetBSD: Makefile,v 1.86 2005/08/10 20:56:29 jlam Exp $
+# $NetBSD: Makefile,v 1.87 2005/08/29 10:36:54 jdc Exp $
 
 DISTNAME=	kdebase-${_KDE_VERSION}
+PKGREVISION=	1
 CATEGORIES=	x11
 COMMENT=	Base modules for the KDE 3 integrated X11 desktop
 
