--- a/databases/lua-sqlite/Makefile
+++ b/databases/lua-sqlite/Makefile
@@ -1,9 +1,9 @@
-# $NetBSD: Makefile,v 1.4 2005/04/11 21:45:12 tv Exp $
+# $NetBSD: Makefile,v 1.5 2005/06/16 06:57:44 jlam Exp $
 #
 
 DISTNAME=	lsqlite_src
 PKGNAME=	lua-sqlite-20030228
-PKGREVISION=	1
+PKGREVISION=	2
 CATEGORIES=	databases
 MASTER_SITES=	http://lua-users.org/files/wiki_insecure/binary_modules/luasqlite/
 EXTRACT_SUFX=	.zip
