--- a/misc/celestia-kde/Makefile
+++ b/misc/celestia-kde/Makefile
@@ -1,6 +1,7 @@
-# $NetBSD: Makefile,v 1.14 2004/11/16 14:34:10 adam Exp $
+# $NetBSD: Makefile,v 1.15 2005/06/17 03:50:21 jlam Exp $
 
 PKGNAME=	${DISTNAME:S/-/-kde-/}
+PKGREVISION=	1
 
 COMMENT=	KDE frontend for free real-time 3D space simulator
 
