--- a/misc/celestia/Makefile
+++ b/misc/celestia/Makefile
@@ -1,5 +1,6 @@
-# $NetBSD: Makefile,v 1.5 2004/11/10 16:38:27 adam Exp $
+# $NetBSD: Makefile,v 1.6 2004/11/12 15:12:00 jlam Exp $
 
+PKGREVISION=	1
 COMMENT=	Free real-time 3D space simulator
 
 USE_PKGINSTALL=		yes
