--- a/www/screws/Makefile
+++ b/www/screws/Makefile
@@ -1,8 +1,8 @@
-# $NetBSD: Makefile,v 1.9 2005/06/19 20:12:05 kristerw Exp $
+# $NetBSD: Makefile,v 1.10 2005/07/16 19:10:41 jlam Exp $
 #
 
 DISTNAME=	screws-0.56
-PKGREVISION=	1
+PKGREVISION=	2
 CATEGORIES=	www
 MASTER_SITES=	ftp://ftp.nopcode.org/prj/screws/
 
