--- a/databases/ruby-mysql/Makefile
+++ b/databases/ruby-mysql/Makefile
@@ -1,10 +1,10 @@
-# $NetBSD: Makefile,v 1.14 2005/04/11 21:45:16 tv Exp $
+# $NetBSD: Makefile,v 1.15 2005/06/12 15:23:03 taca Exp $
 #
 
-DISTNAME=	mysql-ruby-2.6
-PKGNAME=	${RUBY_PKGPREFIX}-mysql-2.6
+DISTNAME=	mysql-ruby-2.7
+PKGNAME=	${RUBY_PKGPREFIX}-mysql-2.7
 CATEGORIES=	databases ruby
-MASTER_SITES=	http://www.tmtm.org/mysql/ruby/
+MASTER_SITES=	http://tmtm.org/downloads/mysql/ruby/
 
 MAINTAINER=	neumann@s-direktnet.de
 HOMEPAGE=       http://www.tmtm.org/en/mysql/ruby/
