--- a/mail/ruby-actionmailer/Makefile
+++ b/mail/ruby-actionmailer/Makefile
@@ -1,17 +1,16 @@
-# $NetBSD: Makefile,v 1.1.1.1 2005/04/10 02:04:54 minskim Exp $
+# $NetBSD: Makefile,v 1.2 2005/04/10 04:15:44 minskim Exp $
 
-DISTNAME=	actionmailer-0.8.1
+DISTNAME=	actionmailer-1.0.1
 PKGNAME=	${RUBY_PKGPREFIX}-${DISTNAME}
-PKGREVISION=	1
 CATEGORIES=	mail ruby
-MASTER_SITES=	http://rubyforge.org/frs/download.php/3687/
+MASTER_SITES=	http://rubyforge.org/frs/download.php/5170/
 EXTRACT_SUFX=	.tgz
 
 MAINTAINER=	minskim@NetBSD.org
 HOMEPAGE=	http://am.rubyonrails.org/
 COMMENT=	Ruby framework for designing email-service layers
 
-DEPENDS+=	${RUBY_PKGPREFIX}-actionpack-[0-9]*:../../www/ruby-actionpack
+DEPENDS+=	${RUBY_PKGPREFIX}-actionpack>=1.9.1:../../www/ruby-actionpack
 
 NO_BUILD=		yes
 NO_CONFIGURE=		yes
