--- a/x11/xlockmore/Makefile.common
+++ b/x11/xlockmore/Makefile.common
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile.common,v 1.28 2005/06/01 18:03:32 jlam Exp $
+# $NetBSD: Makefile.common,v 1.29 2005/06/07 23:35:16 hubertf Exp $
 #
 # This Makefile.common is included by:
 #
@@ -8,7 +8,7 @@
 # If these packages are updated, please remember to reset any PKGREVISIONs
 # in those Makefiles.
 
-DISTNAME=       xlockmore-5.18
+DISTNAME=       xlockmore-5.19
 CATEGORIES=	x11
 MASTER_SITES=	ftp://ftp.tux.org/pub/tux/bagleyd/xlockmore/ \
 		ftp://ibiblio.org/pub/Linux/X11/screensavers/ \
