--- a/games/freeciv-share/Makefile.common
+++ b/games/freeciv-share/Makefile.common
@@ -1,7 +1,7 @@
-# $NetBSD: Makefile.common,v 1.19 2005/04/11 21:45:50 tv Exp $
+# $NetBSD: Makefile.common,v 1.20 2005/08/24 10:36:02 adam Exp $
 
 DISTNAME=	freeciv-${FC_VERS}
-FC_VERS=	2.0.4
+FC_VERS=	2.0.5
 CATEGORIES=	games
 MASTER_SITES=	ftp://ftp.freeciv.org/pub/freeciv/stable/ \
 		http://www.freeciv.org/ftp/stable/ \
