--- a/sysutils/gnome-vfs2/Makefile
+++ b/sysutils/gnome-vfs2/Makefile
@@ -1,5 +1,6 @@
-# $NetBSD: Makefile,v 1.48 2005/03/22 15:56:41 jmmv Exp $
-#
+# $NetBSD: Makefile,v 1.49 2005/08/10 21:11:39 jlam Exp $
+
+PKGREVISION=		1
 
 PKGCONFIG_OVERRIDE=	gnome-vfs-2.0.pc.in
 PKGCONFIG_OVERRIDE+=	gnome-vfs-module-2.0.pc.in
