--- a/misc/xchm/Makefile
+++ b/misc/xchm/Makefile
@@ -1,7 +1,7 @@
-# $NetBSD: Makefile,v 1.22 2005/08/07 11:34:22 wiz Exp $
+# $NetBSD: Makefile,v 1.23 2005/08/14 18:49:08 minskim Exp $
 #
 
-DISTNAME=	xchm-1.0
+DISTNAME=	xchm-1.2
 CATEGORIES=	misc
 MASTER_SITES=	${MASTER_SITE_SOURCEFORGE:=xchm/}
 
