--- a/databases/phppgadmin/Makefile
+++ b/databases/phppgadmin/Makefile
@@ -1,7 +1,6 @@
-# $NetBSD: Makefile,v 1.13 2005/04/11 21:45:14 tv Exp $
+# $NetBSD: Makefile,v 1.14 2005/08/06 21:36:56 adrianp Exp $
 
-DISTNAME=	phpPgAdmin-3.5.4
-PKGREVISION=	# empty
+DISTNAME=	phpPgAdmin-3.5.5
 PKGNAME=	${DISTNAME:S/PgAdmin/pgadmin/}
 CATEGORIES=	databases www
 MASTER_SITES=	${MASTER_SITE_SOURCEFORGE:=phppgadmin/}
@@ -30,6 +29,7 @@ DOCDIR=		${PREFIX}/share/doc/phppgadmin
 CONF_FILES=	${EGDIR}/config.inc.php-dist ${PKG_SYSCONFDIR}/config.inc.php
 DOC_FILES=	CREDITS DEVELOPERS FAQ HISTORY INSTALL LICENSE TODO \
 		TRANSLATORS
+MAKE_DIRS+=	${PREFIX}/share/phppgadmin/conf ${PREFIX}/share/phppgadmin
 
 do-configure:
 	@${SED} -e "s#/usr/bin/pg#${PREFIX}/bin/pg#" \
