--- a/lang/lua/Makefile
+++ b/lang/lua/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.24 2005/06/07 03:52:10 minskim Exp $
+# $NetBSD: Makefile,v 1.25 2005/09/04 04:59:36 jlam Exp $
 
 DISTNAME=	lua-5.0.2
 PKGREVISION=	4
@@ -24,6 +24,7 @@ PKG_INSTALLATION_TYPES=	overwrite pkgviews
 
 USE_LIBTOOL=	yes
 DL_AUTO_VARS=	yes
+LIBS+=		${BUILDLINK_LDADD.dl}
 LUA_CFLAGS=	${CFLAGS}
 LUA_LDFLAGS=	${LDFLAGS} ${LIBS}
 MAKE_ENV+=	MYCFLAGS=${LUA_CFLAGS:Q} MYLDFLAGS=${LUA_LDFLAGS:Q}
