--- a/lang/kaffe/Makefile
+++ b/lang/kaffe/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.60 2005/08/20 19:16:23 jlam Exp $
+# $NetBSD: Makefile,v 1.61 2005/09/06 18:15:32 tonio Exp $
 #
 
 .include "Makefile.common"
@@ -19,6 +19,7 @@ PRINT_PLIST_AWK+=	/^java\/kaffe\/jre\/lib\/security\/java.security$$/ \
 post-install:
 	${INSTALL_DATA} ${WRKSRC}/license.terms ${JAVA_HOME}
 
+.include "../../mk/pthread.buildlink3.mk"
 .include "../../devel/libltdl/buildlink3.mk"
 .include "../../mk/java-env.mk"
 .include "../../mk/bsd.pkg.mk"
