--- a/lang/lua/Makefile
+++ b/lang/lua/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.25 2005/09/04 04:59:36 jlam Exp $
+# $NetBSD: Makefile,v 1.26 2005/09/06 18:31:37 jlam Exp $
 
 DISTNAME=	lua-5.0.2
 PKGREVISION=	4
@@ -16,7 +16,7 @@ MASTER_SITES=	ftp://ftp.tecgraf.puc-rio.br/pub/lua/ \
 		http://mirrors.sunsite.dk/lua/ \
 		http://ftp.chg.ru/pub/lang/lua/
 
-MAINTAINER=	pkgsrc@bjan.freeshell.org
+MAINTAINER=	tech-pkg@NetBSD.org
 HOMEPAGE=	http://www.lua.org/
 COMMENT=	Powerful light-weight language for extending applications
 
