--- a/math/mathomatic/Makefile
+++ b/math/mathomatic/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.47 2005/08/27 19:13:04 minskim Exp $
+# $NetBSD: Makefile,v 1.48 2005/09/05 14:44:15 minskim Exp $
 #
 
 DISTNAME=		mathomatic-12.4.10
@@ -6,7 +6,7 @@ CATEGORIES=		math
 MASTER_SITES=		http://www.panix.com/~gesslein/
 EXTRACT_SUFX=		.tgz
 
-MAINTAINER=		pkgsrc@bjan.freeshell.org
+MAINTAINER=		tech-pkg@NetBSD.org
 HOMEPAGE=		http://www.mathomatic.com/
 COMMENT=		Small portable symbolic math program
 
