--- a/sysutils/smartmontools/Makefile
+++ b/sysutils/smartmontools/Makefile
@@ -1,7 +1,7 @@
-# $NetBSD: Makefile,v 1.6 2005/04/11 21:47:29 tv Exp $
+# $NetBSD: Makefile,v 1.7 2005/05/22 20:08:33 jlam Exp $
 
 DISTNAME=		smartmontools-5.32
-PKGREVISION=		2
+PKGREVISION=		3
 CATEGORIES=		sysutils
 MASTER_SITES=		${MASTER_SITE_SOURCEFORGE:=smartmontools/}
 
