--- a/devel/SDL/Makefile.common
+++ b/devel/SDL/Makefile.common
@@ -1,6 +1,6 @@
-# $NetBSD: Makefile.common,v 1.21 2005/05/22 20:07:47 jlam Exp $
+# $NetBSD: Makefile.common,v 1.22 2005/06/01 18:02:42 jlam Exp $
 
-DISTNAME=	SDL-1.2.8
+DISTNAME=	SDL-1.2.9
 CATEGORIES=	devel games
 MASTER_SITES=	http://www.libsdl.org/release/
 
@@ -11,12 +11,11 @@ COMMENT=	Simple DirectMedia Layer, a cross-platform multimedia library
 DISTINFO_FILE=		${.CURDIR}/../../devel/SDL/distinfo
 PATCHDIR=		${.CURDIR}/../../devel/SDL/patches
 
-GNU_CONFIGURE=		YES
-USE_TOOLS+=		gmake
 USE_LANGUAGES=		c c++
+USE_LIBTOOL=		yes
+USE_TOOLS+=		gmake
+GNU_CONFIGURE=		yes
 PTHREAD_OPTS+=		require
-
-USE_LIBTOOL=		YES
 
 .include "../../mk/bsd.prefs.mk"
 
