--- a/x11/Xcomposite/Makefile
+++ b/x11/Xcomposite/Makefile
@@ -1,11 +1,11 @@
-# $NetBSD: Makefile,v 1.5 2005/07/21 16:29:59 wiz Exp $
+# $NetBSD: Makefile,v 1.6 2005/08/10 20:56:25 jlam Exp $
 #
 
 DISTNAME=		libXcomposite-1.0.1
 PKGNAME=		${DISTNAME:S/lib//}
 PKGREVISION=		1
 CATEGORIES=		x11 devel
-MASTER_SITES=		http://freedesktop.org/~xlibs/release/
+MASTER_SITES=		http://xlibs.freedesktop.org/release/
 EXTRACT_SUFX=		.tar.bz2
 
 MAINTAINER=		tech-pkg@NetBSD.org
