--- a/x11/Xrandr-mixedcase/Makefile
+++ b/x11/Xrandr-mixedcase/Makefile
@@ -1,11 +1,11 @@
-# $NetBSD: Makefile,v 1.14 2005/07/21 16:29:59 wiz Exp $
+# $NetBSD: Makefile,v 1.15 2005/08/10 20:56:26 jlam Exp $
 #
 
 DISTNAME=		libXrandr-1.0.2
 PKGNAME=		Xrandr-1.0.2
 PKGREVISION=		2
 CATEGORIES=		x11 devel
-MASTER_SITES=		http://freedesktop.org/~xlibs/release/
+MASTER_SITES=		http://xlibs.freedesktop.org/release/
 EXTRACT_SUFX=		.tar.bz2
 
 MAINTAINER=		tech-pkg@NetBSD.org
