--- a/x11/Xrender/Makefile
+++ b/x11/Xrender/Makefile
@@ -1,10 +1,10 @@
-# $NetBSD: Makefile,v 1.24 2005/07/21 16:29:59 wiz Exp $
+# $NetBSD: Makefile,v 1.25 2005/08/10 20:56:26 jlam Exp $
 
 DISTNAME=	libXrender-0.8.4
 PKGNAME=	${DISTNAME:S/lib//}
 PKGREVISION=	1
 CATEGORIES=	x11
-MASTER_SITES=	http://freedesktop.org/~xlibs/release/
+MASTER_SITES=	http://xlibs.freedesktop.org/release/
 EXTRACT_SUFX=	.tar.bz2
 
 MAINTAINER=	tech-pkg@NetBSD.org
