--- a/x11/fixesext/Makefile
+++ b/x11/fixesext/Makefile
@@ -1,9 +1,9 @@
-# $NetBSD: Makefile,v 1.11 2005/07/21 16:30:00 wiz Exp $
+# $NetBSD: Makefile,v 1.12 2005/08/10 20:56:26 jlam Exp $
 #
 
 DISTNAME=		fixesext-2.0.1
 CATEGORIES=		x11 devel
-MASTER_SITES=		http://freedesktop.org/~xlibs/release/
+MASTER_SITES=		http://xlibs.freedesktop.org/release/
 EXTRACT_SUFX=		.tar.bz2
 
 MAINTAINER=		tech-pkg@NetBSD.org
