--- a/x11/randrext/Makefile
+++ b/x11/randrext/Makefile
@@ -1,9 +1,9 @@
-# $NetBSD: Makefile,v 1.9 2005/03/05 18:16:21 wiz Exp $
+# $NetBSD: Makefile,v 1.10 2005/04/11 21:48:13 tv Exp $
 
 DISTNAME=		randrext-1.0
 PKGREVISION=		1
 CATEGORIES=		x11 devel
-MASTER_SITES=		http://freedesktop.org/~xlibs/release/
+MASTER_SITES=		http://xlibs.freedesktop.org/release/
 EXTRACT_SUFX=		.tar.bz2
 
 MAINTAINER=		tech-pkg@NetBSD.org
