--- a/x11/xcursor/Makefile
+++ b/x11/xcursor/Makefile
@@ -1,10 +1,10 @@
-# $NetBSD: Makefile,v 1.14 2005/07/21 16:30:01 wiz Exp $
+# $NetBSD: Makefile,v 1.15 2005/08/10 20:56:30 jlam Exp $
 #
 
 DISTNAME=		libXcursor-1.1.2
 PKGNAME=		${DISTNAME:S/libX/x/}
 CATEGORIES=		x11 devel
-MASTER_SITES=		http://freedesktop.org/~xlibs/release/
+MASTER_SITES=		http://xlibs.freedesktop.org/release/
 EXTRACT_SUFX=		.tar.bz2
 
 MAINTAINER=		tech-pkg@NetBSD.org
