--- a/x11/xextensions/Makefile
+++ b/x11/xextensions/Makefile
@@ -1,10 +1,10 @@
-# $NetBSD: Makefile,v 1.3 2005/04/06 15:28:59 xtraeme Exp $
+# $NetBSD: Makefile,v 1.4 2005/04/11 21:48:15 tv Exp $
 #
 
 DISTNAME=		xextensions-1.0.1
 PKGREVISION=		1
 CATEGORIES=		x11
-MASTER_SITES=		http://freedesktop.org/~xlibs/release/
+MASTER_SITES=		http://xlibs.freedesktop.org/release/
 EXTRACT_SUFX=		.tar.bz2
 
 MAINTAINER=		reed@reedmedia.net
