--- a/archivers/dar/Makefile
+++ b/archivers/dar/Makefile
@@ -1,6 +1,7 @@
-# $NetBSD: Makefile,v 1.14 2005/06/30 18:31:24 minskim Exp $
+# $NetBSD: Makefile,v 1.15 2005/07/14 13:47:55 wiz Exp $
 
 DISTNAME=	dar-2.2.2
+PKGREVISION=	1
 CATEGORIES=	archivers sysutils
 MASTER_SITES=	${MASTER_SITE_SOURCEFORGE:=dar/}
 
@@ -22,5 +23,6 @@ CONFIGURE_ARGS+=	--enable-examples
 CONFIGURE_ARGS+=	--disable-upx
 
 .include "../../archivers/bzip2/buildlink3.mk"
+.include "../../devel/gettext-lib/buildlink3.mk"
 .include "../../devel/zlib/buildlink3.mk"
 .include "../../mk/bsd.pkg.mk"
