--- a/mail/imp4/Makefile
+++ b/mail/imp4/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.7 2005/06/02 23:10:28 salo Exp $
+# $NetBSD: Makefile,v 1.8 2005/08/19 18:12:38 jlam Exp $
 
 DISTNAME=	imp-h3-${IMPVER}
 PKGNAME=	imp-${IMPVER}
@@ -14,7 +14,7 @@ CONFLICTS+=	imp-3.*
 
 DEPENDS+=	horde>=3.0.2:../../www/horde3
 DEPENDS+=	php-imap>4.3.3:../../mail/php-imap
-DEPENDS++	pear-Mail-[0-9]*:../../mail/pear-Mail
+DEPENDS+=	pear-Mail-[0-9]*:../../mail/pear-Mail
 
 .include "../../mk/bsd.prefs.mk"
 
