--- a/sysutils/gkrellm/Makefile.common
+++ b/sysutils/gkrellm/Makefile.common
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile.common,v 1.10 2005/03/22 15:14:41 cube Exp $
+# $NetBSD: Makefile.common,v 1.11 2005/05/22 20:08:32 jlam Exp $
 
 DISTNAME=	${GKRELLM_DISTBASE}
 PKGNAME=	${GKRELLM_PKGBASE}-${GKRELLM_VERSION}
@@ -15,12 +15,13 @@ USE_TOOLS+=		gmake
 USE_PKGLOCALEDIR=	YES
 
 MAKE_ENV+=		LOCALEDIR=${PREFIX}/${PKGLOCALEDIR}/locale
+MAKE_ENV+=		GREP=${GREP}
 
 .if defined(GKRELLM_DEBUG)
 MAKE_ENV+=		DEBUG=yes
 .endif
 
-GKRELLM_VERSION=	2.2.5
+GKRELLM_VERSION=	2.2.7
 GKRELLM_DISTBASE=	gkrellm-${GKRELLM_VERSION}
 GKRELLM_SRCDIR=		${WRKDIR}/${GKRELLM_DISTBASE}
 
