--- a/devel/rt3/Makefile
+++ b/devel/rt3/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.7 2005/04/11 21:45:38 tv Exp $
+# $NetBSD: Makefile,v 1.8 2005/08/06 06:19:18 jlam Exp $
 
 DISTNAME=		rt-3.2.3
 CATEGORIES=		devel
@@ -8,7 +8,7 @@ MAINTAINER=		cube@NetBSD.org
 HOMEPAGE=		http://bestpractical.com/rt/
 COMMENT=		Industrial-grade ticketing system
 
-.include "Makefile.options"
+.include "options.mk"
 
 # Core dependencies:
 DEPENDS+=	p5-Digest-[0-9]*:../../security/p5-Digest
