--- a/games/wesnoth/Makefile
+++ b/games/wesnoth/Makefile
@@ -1,6 +1,6 @@
-# $NetBSD: Makefile,v 1.15 2005/08/09 16:26:52 adam Exp $
+# $NetBSD: Makefile,v 1.16 2005/08/10 20:56:17 jlam Exp $
 
-DISTNAME=	wesnoth-0.9.5
+DISTNAME=	wesnoth-0.9.7
 CATEGORIES=	games
 MASTER_SITES=	${MASTER_SITE_SOURCEFORGE:=wesnoth/}
 
