--- a/x11/gtk2+extra/Makefile
+++ b/x11/gtk2+extra/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.18 2005/05/22 20:08:47 jlam Exp $
+# $NetBSD: Makefile,v 1.1.1.1 2005/09/08 10:21:20 bouyer Exp $
 #
 
 DISTNAME=	gtk+extra-2.1.1
@@ -15,7 +15,7 @@ USE_TOOLS+=		gmake pkg-config
 GNU_CONFIGURE=		YES
 
 USE_LIBTOOL=		YES
-LTCONFIG_OVERRIDE=	${WRKSRC}/ltconfig
+PKGCONFIG_OVERRIDE=	gtkextra-2.0.pc.in
 
 .include "../../x11/gtk2/buildlink3.mk"
 .include "../../mk/bsd.pkg.mk"
